# hxmtpy

./: .gitignore  README.md  pyproject.toml
src/hxmtpy/util/: __init__.py  reduction.py
src/hxmtpy/util/data/HXMT_EBOUNDS/: HE.txt  LE.txt  ME.txt
